	* settings.h: Moved the min jump table defines to jump_table.h.
	  Adjusted dir_list functions to not void return type.
	* jump_table.h: Add min jump table defines from settings.h.
	* dir_list.c: Update return information for init_dir_node() to indicate
	  it cannot return null.
	* settings.c: Removed return values from dir_list functions and updated
	  documentation to reflect this change.

2016-05-16  SilverNexus
	* search.c: Fixed a bug introduced when removing function pointers for
	  the search function. len was not adjusted for fileperuser_memcasemem().
	  Then refactored filepruser_memcasemem() to use the address of the
	  last spot needed to search in haystack instead of the length.
	* fileperuser_search.c: Refactored so that the index of the endpoint
	  of the search is calculated once, not on every entry to the function.
	* fileperuser_search.h: Update the function prototype to reflect refactor.
	* jump_table.c: Fixed a bug in the jump table creation that resulted in
	  an inaccurate jump table being created.

2016-05-08  SilverNexus
	* settings.h: Removed function pointer for search. Now an if statement.
	* settings.c: Remove initialization of removed function pointer.
	* parseArgs.c: Remove setting of pointer on alternate option. Just set a flag.
	* search.c: Replace function pointer calls with a set if-elseif-else statements.
	  This method is more optimizable by the compiler.
	* fileperuser.h: Remove prototype for strstr_wrapper.
	* fileperuser_search.c: Removed strstr_wrapper.

2016-05-07  SilverNexus
	* configure.ac: Adjusted comments in autoconf script to use autoconf comments.

2016-05-04  SilverNexus
	* main.c: Change the loop for performing each root search to a do-while loop.
	* parseArgs.c: Refactor the required argument value check to a macro.
	  Refactored the numeric value check for -l and -p to use fewer cycles.
	* search.c: Refactor duplicated file search code to use a macro.

2016-05-03  SilverNexus